ThriftParser/src/bweng/thrift/parser/ThriftParser.java
// $ANTLR 3.5.2 Thrift.g 2015-07-04 21:58:32

package bweng.thrift.parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class ThriftParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARGS_", "ASYNC", "COMMA", "COMMENT", 
		"CONST", "CPP_INCLUDE_", "CPP_TYPE_", "DEFAULT_NAMESPACE_", "DEFERRED", 
		"DIGIT", "DOCUMENT_", "DOUBLE", "ENTRY_", "ENUM", "EVENT", "EXCEPTION", 
		"EXTENDS", "EXTENDS_", "FIELD_", "FIELD_ID_", "HEX_DIGIT", "HEX_INTEGER", 
		"IDENTIFIER", "INCLUDE", "INTEGER", "LCURLY", "LETTER", "LIST", "LITERAL", 
		"MAP", "METHOD_", "NAMESPACE", "ONEWAY", "OPTIONAL", "PACKAGE", "RCURLY", 
		"REQUIRED", "REQUIREDNESS_", "SEMICOLON", "SENUM", "SERVICE", "SET", "STRUCT", 
		"THROWS", "TYPEDEF", "TYPES_", "TYPE_", "TYPE_BINARY", "TYPE_BOOL", "TYPE_BYTE", 
		"TYPE_DOUBLE", "TYPE_I16", "TYPE_I32", "TYPE_I64", "TYPE_STRING", "UNION", 
		"VOID", "WS", "'('", "')'", "'*'", "':'", "'<'", "'='", "'>'", "'['", 
		"']'", "'cpp_include'", "'cpp_namespace'", "'cpp_type'", "'php_namespace'"
	};
	public static final int EOF=-1;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int T__66=66;
	public static final int T__67=67;
	public static final int T__68=68;
	public static final int T__69=69;
	public static final int T__70=70;
	public static final int T__71=71;
	public static final int T__72=72;
	public static final int T__73=73;
	public static final int T__74=74;
	public static final int ARGS_=4;
	public static final int ASYNC=5;
	public static final int COMMA=6;
	public static final int COMMENT=7;
	public static final int CONST=8;
	public static final int CPP_INCLUDE_=9;
	public static final int CPP_TYPE_=10;
	public static final int DEFAULT_NAMESPACE_=11;
	public static final int DEFERRED=12;
	public static final int DIGIT=13;
	public static final int DOCUMENT_=14;
	public static final int DOUBLE=15;
	public static final int ENTRY_=16;
	public static final int ENUM=17;
	public static final int EVENT=18;
	public static final int EXCEPTION=19;
	public static final int EXTENDS=20;
	public static final int EXTENDS_=21;
	public static final int FIELD_=22;
	public static final int FIELD_ID_=23;
	public static final int HEX_DIGIT=24;
	public static final int HEX_INTEGER=25;
	public static final int IDENTIFIER=26;
	public static final int INCLUDE=27;
	public static final int INTEGER=28;
	public static final int LCURLY=29;
	public static final int LETTER=30;
	public static final int LIST=31;
	public static final int LITERAL=32;
	public static final int MAP=33;
	public static final int METHOD_=34;
	public static final int NAMESPACE=35;
	public static final int ONEWAY=36;
	public static final int OPTIONAL=37;
	public static final int PACKAGE=38;
	public static final int RCURLY=39;
	public static final int REQUIRED=40;
	public static final int REQUIREDNESS_=41;
	public static final int SEMICOLON=42;
	public static final int SENUM=43;
	public static final int SERVICE=44;
	public static final int SET=45;
	public static final int STRUCT=46;
	public static final int THROWS=47;
	public static final int TYPEDEF=48;
	public static final int TYPES_=49;
	public static final int TYPE_=50;
	public static final int TYPE_BINARY=51;
	public static final int TYPE_BOOL=52;
	public static final int TYPE_BYTE=53;
	public static final int TYPE_DOUBLE=54;
	public static final int TYPE_I16=55;
	public static final int TYPE_I32=56;
	public static final int TYPE_I64=57;
	public static final int TYPE_STRING=58;
	public static final int UNION=59;
	public static final int VOID=60;
	public static final int WS=61;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public ThriftParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public ThriftParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return ThriftParser.tokenNames; }
	@Override public String getGrammarFileName() { return "Thrift.g"; }


	public static class document_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "document"
	// Thrift.g:64:1: document : ( header )* ( definition )* EOF -> ^( DOCUMENT_ ( header )* ( definition )* ) ;
	public final ThriftParser.document_return document() throws RecognitionException {
		ThriftParser.document_return retval = new ThriftParser.document_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token EOF3=null;
		ParserRuleReturnScope header1 =null;
		ParserRuleReturnScope definition2 =null;

		CommonTree EOF3_tree=null;
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_header=new RewriteRuleSubtreeStream(adaptor,"rule header");
		RewriteRuleSubtreeStream stream_definition=new RewriteRuleSubtreeStream(adaptor,"rule definition");

		try {
			// Thrift.g:65:5: ( ( header )* ( definition )* EOF -> ^( DOCUMENT_ ( header )* ( definition )* ) )
			// Thrift.g:65:7: ( header )* ( definition )* EOF
			{
			// Thrift.g:65:7: ( header )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==INCLUDE||LA1_0==NAMESPACE||(LA1_0 >= 71 && LA1_0 <= 72)||LA1_0==74) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// Thrift.g:65:7: header
					{
					pushFollow(FOLLOW_header_in_document388);
					header1=header();
					state._fsp--;

					stream_header.add(header1.getTree());
					}
					break;

				default :
					break loop1;
				}
			}

			// Thrift.g:65:15: ( definition )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==CONST||LA2_0==ENUM||LA2_0==EXCEPTION||LA2_0==PACKAGE||(LA2_0 >= SENUM && LA2_0 <= SERVICE)||LA2_0==STRUCT||LA2_0==TYPEDEF||LA2_0==UNION) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// Thrift.g:65:15: definition
					{
					pushFollow(FOLLOW_definition_in_document391);
					definition2=definition();
					state._fsp--;

					stream_definition.add(definition2.getTree());
					}
					break;

				default :
					break loop2;
				}
			}

			EOF3=(Token)match(input,EOF,FOLLOW_EOF_in_document394);  
			stream_EOF.add(EOF3);

			// AST REWRITE
			// elements: header, definition
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 65:31: -> ^( DOCUMENT_ ( header )* ( definition )* )
			{
				// Thrift.g:65:34: ^( DOCUMENT_ ( header )* ( definition )* )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(DOCUMENT_, "DOCUMENT_"), root_1);
				// Thrift.g:65:46: ( header )*
				while ( stream_header.hasNext() ) {
					adaptor.addChild(root_1, stream_header.nextTree());
				}
				stream_header.reset();

				// Thrift.g:65:54: ( definition )*
				while ( stream_definition.hasNext() ) {
					adaptor.addChild(root_1, stream_definition.nextTree());
				}
				stream_definition.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "document"


	public static class header_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "header"
	// Thrift.g:69:1: header : ( include | namespace | cpp_include );
	public final ThriftParser.header_return header() throws RecognitionException {
		ThriftParser.header_return retval = new ThriftParser.header_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope include4 =null;
		ParserRuleReturnScope namespace5 =null;
		ParserRuleReturnScope cpp_include6 =null;


		try {
			// Thrift.g:70:5: ( include | namespace | cpp_include )
			int alt3=3;
			switch ( input.LA(1) ) {
			case INCLUDE:
				{
				alt3=1;
				}
				break;
			case NAMESPACE:
			case 72:
			case 74:
				{
				alt3=2;
				}
				break;
			case 71:
				{
				alt3=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}
			switch (alt3) {
				case 1 :
					// Thrift.g:70:7: include
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_include_in_header424);
					include4=include();
					state._fsp--;

					adaptor.addChild(root_0, include4.getTree());

					}
					break;
				case 2 :
					// Thrift.g:70:17: namespace
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_namespace_in_header428);
					namespace5=namespace();
					state._fsp--;

					adaptor.addChild(root_0, namespace5.getTree());

					}
					break;
				case 3 :
					// Thrift.g:70:29: cpp_include
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_cpp_include_in_header432);
					cpp_include6=cpp_include();
					state._fsp--;

					adaptor.addChild(root_0, cpp_include6.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "header"


	public static class include_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "include"
	// Thrift.g:73:1: include : INCLUDE LITERAL -> ^( INCLUDE LITERAL ) ;
	public final ThriftParser.include_return include() throws RecognitionException {
		ThriftParser.include_return retval = new ThriftParser.include_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token INCLUDE7=null;
		Token LITERAL8=null;

		CommonTree INCLUDE7_tree=null;
		CommonTree LITERAL8_tree=null;
		RewriteRuleTokenStream stream_LITERAL=new RewriteRuleTokenStream(adaptor,"token LITERAL");
		RewriteRuleTokenStream stream_INCLUDE=new RewriteRuleTokenStream(adaptor,"token INCLUDE");

		try {
			// Thrift.g:74:5: ( INCLUDE LITERAL -> ^( INCLUDE LITERAL ) )
			// Thrift.g:74:7: INCLUDE LITERAL
			{
			INCLUDE7=(Token)match(input,INCLUDE,FOLLOW_INCLUDE_in_include449);  
			stream_INCLUDE.add(INCLUDE7);

			LITERAL8=(Token)match(input,LITERAL,FOLLOW_LITERAL_in_include451);  
			stream_LITERAL.add(LITERAL8);

			// AST REWRITE
			// elements: INCLUDE, LITERAL
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 74:23: -> ^( INCLUDE LITERAL )
			{
				// Thrift.g:74:26: ^( INCLUDE LITERAL )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot(stream_INCLUDE.nextNode(), root_1);
				adaptor.addChild(root_1, stream_LITERAL.nextNode());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "include"


	public static class dpackage_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "dpackage"
	// Thrift.g:77:1: dpackage : PACKAGE k= IDENTIFIER LCURLY ( definition )* RCURLY -> ^( PACKAGE $k ( definition )* ) ;
	public final ThriftParser.dpackage_return dpackage() throws RecognitionException {
		ThriftParser.dpackage_return retval = new ThriftParser.dpackage_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token k=null;
		Token PACKAGE9=null;
		Token LCURLY10=null;
		Token RCURLY12=null;
		ParserRuleReturnScope definition11 =null;

		CommonTree k_tree=null;
		CommonTree PACKAGE9_tree=null;
		CommonTree LCURLY10_tree=null;
		CommonTree RCURLY12_tree=null;
		RewriteRuleTokenStream stream_PACKAGE=new RewriteRuleTokenStream(adaptor,"token PACKAGE");
		RewriteRuleTokenStream stream_LCURLY=new RewriteRuleTokenStream(adaptor,"token LCURLY");
		RewriteRuleTokenStream stream_IDENTIFIER=new RewriteRuleTokenStream(adaptor,"token IDENTIFIER");
		RewriteRuleTokenStream stream_RCURLY=new RewriteRuleTokenStream(adaptor,"token RCURLY");
		RewriteRuleSubtreeStream stream_definition=new RewriteRuleSubtreeStream(adaptor,"rule definition");

		try {
			// Thrift.g:78:5: ( PACKAGE k= IDENTIFIER LCURLY ( definition )* RCURLY -> ^( PACKAGE $k ( definition )* ) )
			// Thrift.g:78:7: PACKAGE k= IDENTIFIER LCURLY ( definition )* RCURLY
			{
			PACKAGE9=(Token)match(input,PACKAGE,FOLLOW_PACKAGE_in_dpackage476);  
			stream_PACKAGE.add(PACKAGE9);

			k=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_dpackage480);  
			stream_IDENTIFIER.add(k);

			LCURLY10=(Token)match(input,LCURLY,FOLLOW_LCURLY_in_dpackage482);  
			stream_LCURLY.add(LCURLY10);

			// Thrift.g:78:35: ( definition )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==CONST||LA4_0==ENUM||LA4_0==EXCEPTION||LA4_0==PACKAGE||(LA4_0 >= SENUM && LA4_0 <= SERVICE)||LA4_0==STRUCT||LA4_0==TYPEDEF||LA4_0==UNION) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// Thrift.g:78:35: definition
					{
					pushFollow(FOLLOW_definition_in_dpackage484);
					definition11=definition();
					state._fsp--;

					stream_definition.add(definition11.getTree());
					}
					break;

				default :
					break loop4;
				}
			}

			RCURLY12=(Token)match(input,RCURLY,FOLLOW_RCURLY_in_dpackage487);  
			stream_RCURLY.add(RCURLY12);

			// AST REWRITE
			// elements: definition, PACKAGE, k
			// token labels: k
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleTokenStream stream_k=new RewriteRuleTokenStream(adaptor,"token k",k);
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 78:54: -> ^( PACKAGE $k ( definition )* )
			{
				// Thrift.g:78:57: ^( PACKAGE $k ( definition )* )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot(stream_PACKAGE.nextNode(), root_1);
				adaptor.addChild(root_1, stream_k.nextNode());
				// Thrift.g:78:70: ( definition )*
				while ( stream_definition.hasNext() ) {
					adaptor.addChild(root_1, stream_definition.nextTree());
				}
				stream_definition.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "dpackage"


	public static class namespace_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "namespace"
	// Thrift.g:81:1: namespace : ( NAMESPACE '*' (v= IDENTIFIER |v= LITERAL ) -> ^( DEFAULT_NAMESPACE_ $v) | NAMESPACE k= IDENTIFIER (v= IDENTIFIER |v= LITERAL ) -> ^( NAMESPACE $k $v) | 'cpp_namespace' IDENTIFIER -> ^( NAMESPACE IDENTIFIER[\"cpp\"] IDENTIFIER ) | 'php_namespace' IDENTIFIER -> ^( NAMESPACE IDENTIFIER[\"php\"] IDENTIFIER ) );
	public final ThriftParser.namespace_return namespace() throws RecognitionException {
		ThriftParser.namespace_return retval = new ThriftParser.namespace_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token v=null;
		Token k=null;
		Token NAMESPACE13=null;
		Token char_literal14=null;
		Token NAMESPACE15=null;
		Token string_literal16=null;
		Token IDENTIFIER17=null;
		Token string_literal18=null;
		Token IDENTIFIER19=null;

		CommonTree v_tree=null;
		CommonTree k_tree=null;
		CommonTree NAMESPACE13_tree=null;
		CommonTree char_literal14_tree=null;
		CommonTree NAMESPACE15_tree=null;
		CommonTree string_literal16_tree=null;
		CommonTree IDENTIFIER17_tree=null;
		CommonTree string_literal18_tree=null;
		CommonTree IDENTIFIER19_tree=null;
		RewriteRuleTokenStream stream_NAMESPACE=new RewriteRuleTokenStream(adaptor,"token NAMESPACE");
		RewriteRuleTokenStream stream_LITERAL=new RewriteRuleTokenStream(adaptor,"token LITERAL");
		RewriteRuleTokenStream stream_IDENTIFIER=new RewriteRuleTokenStream(adaptor,"token IDENTIFIER");
		RewriteRuleTokenStream stream_72=new RewriteRuleTokenStream(adaptor,"token 72");
		RewriteRuleTokenStream stream_74=new RewriteRuleTokenStream(adaptor,"token 74");
		RewriteRuleTokenStream stream_64=new RewriteRuleTokenStream(adaptor,"token 64");

		try {
			// Thrift.g:82:5: ( NAMESPACE '*' (v= IDENTIFIER |v= LITERAL ) -> ^( DEFAULT_NAMESPACE_ $v) | NAMESPACE k= IDENTIFIER (v= IDENTIFIER |v= LITERAL ) -> ^( NAMESPACE $k $v) | 'cpp_namespace' IDENTIFIER -> ^( NAMESPACE IDENTIFIER[\"cpp\"] IDENTIFIER ) | 'php_namespace' IDENTIFIER -> ^( NAMESPACE IDENTIFIER[\"php\"] IDENTIFIER ) )
			int alt7=4;
			switch ( input.LA(1) ) {
			case NAMESPACE:
				{
				int LA7_1 = input.LA(2);
				if ( (LA7_1==64) ) {
					alt7=1;
				}
				else if ( (LA7_1==IDENTIFIER) ) {
					alt7=2;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 7, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case 72:
				{
				alt7=3;
				}
				break;
			case 74:
				{
				alt7=4;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 7, 0, input);
				throw nvae;
			}
			switch (alt7) {
				case 1 :
					// Thrift.g:82:7: NAMESPACE '*' (v= IDENTIFIER |v= LITERAL )
					{
					NAMESPACE13=(Token)match(input,NAMESPACE,FOLLOW_NAMESPACE_in_namespace517);  
					stream_NAMESPACE.add(NAMESPACE13);

					char_literal14=(Token)match(input,64,FOLLOW_64_in_namespace519);  
					stream_64.add(char_literal14);

					// Thrift.g:82:21: (v= IDENTIFIER |v= LITERAL )
					int alt5=2;
					int LA5_0 = input.LA(1);
					if ( (LA5_0==IDENTIFIER) ) {
						alt5=1;
					}
					else if ( (LA5_0==LITERAL) ) {
						alt5=2;
					}

					else {
						NoViableAltException nvae =
							new NoViableAltException("", 5, 0, input);
						throw nvae;
					}

					switch (alt5) {
						case 1 :
							// Thrift.g:82:22: v= IDENTIFIER
							{
							v=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_namespace524);  
							stream_IDENTIFIER.add(v);

							}
							break;
						case 2 :
							// Thrift.g:82:37: v= LITERAL
							{
							v=(Token)match(input,LITERAL,FOLLOW_LITERAL_in_namespace530);  
							stream_LITERAL.add(v);

							}
							break;

					}

					// AST REWRITE
					// elements: v
					// token labels: v
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleTokenStream stream_v=new RewriteRuleTokenStream(adaptor,"token v",v);
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 82:48: -> ^( DEFAULT_NAMESPACE_ $v)
					{
						// Thrift.g:82:51: ^( DEFAULT_NAMESPACE_ $v)
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(DEFAULT_NAMESPACE_, "DEFAULT_NAMESPACE_"), root_1);
						adaptor.addChild(root_1, stream_v.nextNode());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;
				case 2 :
					// Thrift.g:83:7: NAMESPACE k= IDENTIFIER (v= IDENTIFIER |v= LITERAL )
					{
					NAMESPACE15=(Token)match(input,NAMESPACE,FOLLOW_NAMESPACE_in_namespace548);  
					stream_NAMESPACE.add(NAMESPACE15);

					k=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_namespace552);  
					stream_IDENTIFIER.add(k);

					// Thrift.g:83:30: (v= IDENTIFIER |v= LITERAL )
					int alt6=2;
					int LA6_0 = input.LA(1);
					if ( (LA6_0==IDENTIFIER) ) {
						alt6=1;
					}
					else if ( (LA6_0==LITERAL) ) {
						alt6=2;
					}

					else {
						NoViableAltException nvae =
							new NoViableAltException("", 6, 0, input);
						throw nvae;
					}

					switch (alt6) {
						case 1 :
							// Thrift.g:83:31: v= IDENTIFIER
							{
							v=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_namespace557);  
							stream_IDENTIFIER.add(v);

							}
							break;
						case 2 :
							// Thrift.g:83:46: v= LITERAL
							{
							v=(Token)match(input,LITERAL,FOLLOW_LITERAL_in_namespace563);  
							stream_LITERAL.add(v);
